# P1-Project-Warehouse-Robots

./: .gitignore  CMakeLists.txt  README.md  items.txt  main.c  results.txt
.github/scripts/: send_to_discord.py
.github/workflows/: cmake-single-platform.yml  cmake-unit-tests.yml  simulations.yml
SimulationBenchmark/: simulation.c
cmake/: mtest.cmake
simulation/: CMakeLists.txt  simulation.c
src/: CMakeLists.txt  Robot.c  a_star.c  a_star.h  bruteforce.c  bruteforce.h  generate_picking_list.c  generate_picking_list.h  greedy_step.c  greedy_step.h  main.c  minheap_functions.c  robot.c  robot.h  warehouse.c  warehouse.h
tests/: CMakeLists.txt  test_robot.c  test_warehouse.c  test_warehouse.h
